--- a/project_role/i18n/de.po
+++ b/project_role/i18n/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2023-03-03 09:15+0000\n"
+"PO-Revision-Date: 2023-07-08 14:10+0000\n"
 "Last-Translator: Nils Coenen <nils.coenen@nico-solutions.de>\n"
 "Language-Team: none\n"
 "Language: de\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.14.1\n"
+"X-Generator: Weblate 4.17\n"
 
 #. module: project_role
 #. odoo-python
@@ -255,14 +255,13 @@ msgstr "Zuletzt aktualisiert am"
 #: model:ir.model.fields,field_description:project_role.field_res_company__project_limit_role_to_assignments
 #: model:ir.model.fields,field_description:project_role.field_res_config_settings__project_limit_role_to_assignments
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
-#, fuzzy
 msgid "Limit Project Role to Assignments"
 msgstr "Projekt-Rollenzuweisungen"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_project__limit_role_to_assignments
 msgid "Limit Role To Assignments"
-msgstr ""
+msgstr "Beschränken Sie die Rolle auf Zuweisungen"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_main_attachment_id
@@ -297,14 +296,13 @@ msgstr "Anzahl der Aktionen"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_has_error_counter
-#, fuzzy
 msgid "Number of errors"
 msgstr "Anzahl der Fehler"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_needaction_counter
-msgid "Number of messages which requires an action"
-msgstr "Dies ist die Anzahl von Nachrichten, die eine Aktion benötigen."
+msgid "Number of messages requiring action"
+msgstr ""
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_has_error_counter
@@ -314,7 +312,7 @@ msgstr "Dies ist die Anzahl von Nachrichten mit einem Übertragungsfehler."
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__parent_path
 msgid "Parent Path"
-msgstr ""
+msgstr "Übergeordneter Pfad"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_role__parent_id
@@ -326,7 +324,7 @@ msgstr "Übergeordnete Rolle"
 #: code:addons/project_role/models/project_role.py:0
 #, python-format
 msgid "Please activate first parent role %s"
-msgstr "Bitte zuerst die übergeordnete Rolle %s aktivieren."
+msgstr "Bitte zuerst die übergeordnete Rolle %s aktivieren"
 
 #. module: project_role
 #: model:ir.model,name:project_role.model_project_project
@@ -461,6 +459,9 @@ msgstr "Website-Nachrichten"
 #: model:ir.model.fields,help:project_role.field_project_assignment__website_message_ids
 msgid "Website communication history"
 msgstr "Website-Kommunikationshistorie"
+
+#~ msgid "Number of messages which requires an action"
+#~ msgstr "Dies ist die Anzahl von Nachrichten, die eine Aktion benötigen."
 
 #, python-format
 #~ msgid "%s as %s"
