--- a/project_role/i18n/es.po
+++ b/project_role/i18n/es.po
@@ -6,15 +6,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2023-02-01 10:45+0000\n"
-"Last-Translator: David Ramia <david.ramia@processcontrol.es>\n"
+"PO-Revision-Date: 2023-09-20 20:21+0000\n"
+"Last-Translator: Ivorra78 <informatica@totmaterial.es>\n"
 "Language-Team: none\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.14.1\n"
+"X-Generator: Weblate 4.17\n"
 
 #. module: project_role
 #. odoo-python
@@ -48,8 +48,8 @@ msgstr "%(parent)s / %(own)s"
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid ""
 "<span class=\"fa fa-lg fa-building-o\" title=\"Values set here are company-"
-"specific.\" role=\"img\" aria-label=\"Values set here are company-"
-"specific.\" groups=\"base.group_multi_company\"/>"
+"specific.\" role=\"img\" aria-label=\"Values set here are company-specific."
+"\" groups=\"base.group_multi_company\"/>"
 msgstr ""
 "<span class=\"fa fa-lg fa-building-o\" title=\"Los valores establecidos aquí "
 "son específicos de la empresa.\" role=\"img\" aria-label=\"Los valores "
@@ -60,13 +60,15 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:project_role.res_config_settings_view_form
 msgid ""
 "<span class=\"o_form_label\">Project Roles</span>\n"
-"                                <span class=\"fa fa-lg fa-building-o\" title=\"Values set here are company-specific.\" role=\"img\" aria-label=\"Values set here are company-specific.\" groups=\"base.group_multi_company\"/>"
+"                                <span class=\"fa fa-lg fa-building-o\" title="
+"\"Values set here are company-specific.\" role=\"img\" aria-label=\"Values "
+"set here are company-specific.\" groups=\"base.group_multi_company\"/>"
 msgstr ""
 "<span class=\"o_form_label\">Roles del proyecto</span>\n"
 "                                <span class=\"fa fa-lg fa-building-o\" title="
-"\"Los valores establecidos aquí son específicos de la empresa.\" role=\"img\""
-" aria-label=\"Los valores establecidos aquí son específicos de la empresa.\" "
-"groups=\"base.group_multi_company\"/>"
+"\"Los valores establecidos aquí son específicos de la empresa.\" role=\"img"
+"\" aria-label=\"Los valores establecidos aquí son específicos de la empresa."
+"\" groups=\"base.group_multi_company\"/>"
 
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_needaction
@@ -192,7 +194,7 @@ msgstr "Seguidores"
 #. module: project_role
 #: model:ir.model.fields,field_description:project_role.field_project_assignment__message_partner_ids
 msgid "Followers (Partners)"
-msgstr "Seguidores (empresas)"
+msgstr "Seguidores (Socios)"
 
 #. module: project_role
 #: model_terms:ir.ui.view,arch_db:project_role.project_assignment_search
@@ -299,7 +301,7 @@ msgstr "Número de errores"
 
 #. module: project_role
 #: model:ir.model.fields,help:project_role.field_project_assignment__message_needaction_counter
-msgid "Number of messages which requires an action"
+msgid "Number of messages requiring action"
 msgstr "Número de mensajes que requieren una acción"
 
 #. module: project_role
@@ -413,7 +415,8 @@ msgstr "Usuario"
 #: code:addons/project_role/models/project_assignment.py:0
 #, python-format
 msgid "User %(USER)s can not be assigned to role %(ROLE)s on %(PROJECT)s."
-msgstr "El usuario %(USER)s no se puede asignar al rol %(ROLE)s en %(PROJECT)s."
+msgstr ""
+"El usuario %(USER)s no se puede asignar al rol %(ROLE)s en %(PROJECT)s."
 
 #. module: project_role
 #. odoo-python
@@ -448,3 +451,6 @@ msgstr "Mensajes del Sitio Web"
 #: model:ir.model.fields,help:project_role.field_project_assignment__website_message_ids
 msgid "Website communication history"
 msgstr "Historial de comunicación del Sitio Web"
+
+#~ msgid "Number of messages which requires an action"
+#~ msgstr "Número de mensajes que requieren una acción"
