[MIG] project_timesheet_time_control: Migration to 16.0
Co-Authored-By: Stefan Ungureanu <stefan.ungureanu@tecnativa.com>
Co-Authored-By: Pedro M. Baeza <pedro.baeza@tecnativa.com>

--- a/project_timesheet_time_control/i18n/project_timesheet_time_control.pot
+++ b/project_timesheet_time_control/i18n/project_timesheet_time_control.pot
@@ -4,8 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2023-07-21 05:43+0000\n"
+"PO-Revision-Date: 2023-07-21 05:43+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -14,6 +16,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/wizards/hr_timesheet_switch.py:0
 #, python-format
 msgid ""
@@ -64,6 +67,7 @@ msgid "Cancel"
 msgstr ""
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/account_analytic_line.py:0
 #, python-format
 msgid ""
@@ -155,6 +159,7 @@ msgid "Mixin for records related with timesheet lines"
 msgstr ""
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/hr_timesheet_time_control_mixin.py:0
 #, python-format
 msgid ""
@@ -184,6 +189,7 @@ msgid "Previous timer start"
 msgstr ""
 
 #. module: project_timesheet_time_control
+#: model:ir.model,name:project_timesheet_time_control.model_project_project
 #: model:ir.model.fields,field_description:project_timesheet_time_control.field_hr_timesheet_switch__project_id
 msgid "Project"
 msgstr ""
@@ -194,6 +200,7 @@ msgid "Resume"
 msgstr ""
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/account_analytic_line.py:0
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.account_analytic_line_tree
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.hr_timesheet_line_form
@@ -230,6 +237,7 @@ msgid "Start new timer"
 msgstr ""
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/hr_timesheet_time_control_mixin.py:0
 #: model:ir.actions.act_window,name:project_timesheet_time_control.hr_timesheet_switch_action
 #: model:ir.ui.menu,name:project_timesheet_time_control.hr_timesheet_switch_menu
@@ -292,11 +300,6 @@ msgstr ""
 #. module: project_timesheet_time_control
 #: model:ir.model.fields,help:project_timesheet_time_control.field_hr_timesheet_switch__running_timer_id
 msgid "This timer is running and will be stopped"
-msgstr ""
-
-#. module: project_timesheet_time_control
-#: model:ir.model,name:project_timesheet_time_control.model_project_project
-msgid "WBS element"
 msgstr ""
 
 #. module: project_timesheet_time_control
