--- a/project_timesheet_time_control/i18n/es.po
+++ b/project_timesheet_time_control/i18n/es.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-05 14:28+0000\n"
-"PO-Revision-Date: 2023-03-03 09:16+0000\n"
+"POT-Creation-Date: 2023-07-21 05:43+0000\n"
+"PO-Revision-Date: 2023-07-21 07:44+0200\n"
 "Last-Translator: Leonardo J. Caballero G. <leonardocaballero@gmail.com>\n"
 "Language-Team: Spanish (https://www.transifex.com/oca/teams/23907/es/)\n"
 "Language: es\n"
@@ -18,9 +18,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 4.14.1\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/wizards/hr_timesheet_switch.py:0
 #, python-format
 msgid ""
@@ -52,14 +53,14 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.view_project_kanban_inherited
 msgid ""
 "<span class=\"o_label\">\n"
-"                            <i class=\"fa fa-lg fa-play-circle text-success"
-"\"/>\n"
+"                            <i class=\"fa fa-lg fa-play-circle text-"
+"success\"/>\n"
 "                            Start work\n"
 "                        </span>"
 msgstr ""
 "<span class=\"o_label\">\n"
-"                            <i class=\"fa fa-lg fa-play-circle text-success"
-"\"/>\n"
+"                            <i class=\"fa fa-lg fa-play-circle text-"
+"success\"/>\n"
 "                            Comenzar trabajo\n"
 "                        </span>"
 
@@ -67,14 +68,14 @@ msgstr ""
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.view_project_kanban_inherited
 msgid ""
 "<span class=\"o_label\">\n"
-"                            <i class=\"fa fa-lg fa-stop-circle text-warning"
-"\"/>\n"
+"                            <i class=\"fa fa-lg fa-stop-circle text-"
+"warning\"/>\n"
 "                            Stop work\n"
 "                        </span>"
 msgstr ""
 "<span class=\"o_label\">\n"
-"                            <i class=\"fa fa-lg fa-stop-circle text-warning"
-"\"/>\n"
+"                            <i class=\"fa fa-lg fa-stop-circle text-"
+"warning\"/>\n"
 "                            Detener trabajo\n"
 "                        </span>"
 
@@ -89,6 +90,7 @@ msgid "Cancel"
 msgstr "Cancelar"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/account_analytic_line.py:0
 #, python-format
 msgid ""
@@ -184,6 +186,7 @@ msgid "Mixin for records related with timesheet lines"
 msgstr "Mixin para registros relacionados con líneas de parte de horas"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/hr_timesheet_time_control_mixin.py:0
 #, python-format
 msgid ""
@@ -215,6 +218,7 @@ msgid "Previous timer start"
 msgstr "Comienzo del cronómetro anterior"
 
 #. module: project_timesheet_time_control
+#: model:ir.model,name:project_timesheet_time_control.model_project_project
 #: model:ir.model.fields,field_description:project_timesheet_time_control.field_hr_timesheet_switch__project_id
 msgid "Project"
 msgstr "Proyecto"
@@ -225,6 +229,7 @@ msgid "Resume"
 msgstr "Continuar"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/account_analytic_line.py:0
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.account_analytic_line_tree
 #: model_terms:ir.ui.view,arch_db:project_timesheet_time_control.hr_timesheet_line_form
@@ -261,6 +266,7 @@ msgid "Start new timer"
 msgstr "Comenzar nuevo cronómetro"
 
 #. module: project_timesheet_time_control
+#. odoo-python
 #: code:addons/project_timesheet_time_control/models/hr_timesheet_time_control_mixin.py:0
 #: model:ir.actions.act_window,name:project_timesheet_time_control.hr_timesheet_switch_action
 #: model:ir.ui.menu,name:project_timesheet_time_control.hr_timesheet_switch_menu
@@ -327,11 +333,6 @@ msgstr ""
 #: model:ir.model.fields,help:project_timesheet_time_control.field_hr_timesheet_switch__running_timer_id
 msgid "This timer is running and will be stopped"
 msgstr "Este cronómetro está en marcha y se detendrá"
-
-#. module: project_timesheet_time_control
-#: model:ir.model,name:project_timesheet_time_control.model_project_project
-msgid "WBS element"
-msgstr "Elemento WBS"
 
 #. module: project_timesheet_time_control
 #: model:ir.model.fields,help:project_timesheet_time_control.field_hr_timesheet_switch__running_timer_duration
