--- a/project_key/i18n/fr.po
+++ b/project_key/i18n/fr.po
@@ -29,10 +29,9 @@ msgid "Key Sequence"
 msgstr "Séquence de clé"
 
 #. module: project_key
-#: model:ir.model.fields,field_description:project_key.field_project_project____last_update
-#: model:ir.model.fields,field_description:project_key.field_project_task____last_update
-msgid "Last Modified on"
-msgstr ""
+#: model:ir.model,name:project_key.model_project_project
+msgid "Project"
+msgstr "Projet"
 
 #. module: project_key
 #: model:ir.model.constraint,message:project_key.constraint_project_project_project_key_unique
@@ -40,6 +39,7 @@ msgid "Project key must be unique"
 msgstr "La clé de projet doit être unique"
 
 #. module: project_key
+#. odoo-python
 #: code:addons/project_key/models/project_project.py:0
 #, python-format
 msgid "Project task sequence for project"
@@ -60,15 +60,5 @@ msgstr "La clé de tâche doit être unique !"
 msgid "URL"
 msgstr ""
 
-#. module: project_key
-#: model:ir.model,name:project_key.model_project_project
-msgid "WBS element"
-msgstr ""
-
-#. module: project_key
-#: model:ir.model.fields,field_description:project_key.field_project_task__key
-msgid "key"
-msgstr "Clé"
-
-#~ msgid "Project"
-#~ msgstr "Projet"
+#~ msgid "key"
+#~ msgstr "Clé"
