--- a/project_task_pull_request/i18n/ca.po
+++ b/project_task_pull_request/i18n/ca.po
@@ -31,6 +31,7 @@ msgid "PR URI"
 msgstr "PR URI"
 
 #. module: project_task_pull_request
+#. odoo-python
 #: code:addons/project_task_pull_request/models/project_task.py:0
 #, python-format
 msgid ""
@@ -38,6 +39,11 @@ msgid ""
 msgstr ""
 "Si us plau, afegiu l'URI de la sol·licitud d'extracció abans de traslladar "
 "la tasca a aquesta fase."
+
+#. module: project_task_pull_request
+#: model:ir.model,name:project_task_pull_request.model_project_project
+msgid "Project"
+msgstr "Projecte"
 
 #. module: project_task_pull_request
 #: model_terms:ir.ui.view,arch_db:project_task_pull_request.edit_project
@@ -48,11 +54,3 @@ msgstr "URI de sol·licitud d'extracció"
 #: model:ir.model,name:project_task_pull_request.model_project_task
 msgid "Task"
 msgstr "Tasca"
-
-#. module: project_task_pull_request
-#: model:ir.model,name:project_task_pull_request.model_project_project
-msgid "WBS element"
-msgstr ""
-
-#~ msgid "Project"
-#~ msgstr "Projecte"
