--- a/project_task_pull_request/i18n/de.po
+++ b/project_task_pull_request/i18n/de.po
@@ -31,6 +31,7 @@ msgid "PR URI"
 msgstr "PR URI"
 
 #. module: project_task_pull_request
+#. odoo-python
 #: code:addons/project_task_pull_request/models/project_task.py:0
 #, python-format
 msgid ""
@@ -38,6 +39,11 @@ msgid ""
 msgstr ""
 "Bitte fügen Sie die URI des Pull Request's hinzu, bevor Sie eine Aufgabe in "
 "diese Stufe verschieben."
+
+#. module: project_task_pull_request
+#: model:ir.model,name:project_task_pull_request.model_project_project
+msgid "Project"
+msgstr "Projekt"
 
 #. module: project_task_pull_request
 #: model_terms:ir.ui.view,arch_db:project_task_pull_request.edit_project
@@ -48,11 +54,3 @@ msgstr "Pull Request URIs"
 #: model:ir.model,name:project_task_pull_request.model_project_task
 msgid "Task"
 msgstr "Aufgabe"
-
-#. module: project_task_pull_request
-#: model:ir.model,name:project_task_pull_request.model_project_project
-msgid "WBS element"
-msgstr ""
-
-#~ msgid "Project"
-#~ msgstr "Projekt"
