--- a/project_task_pull_request/i18n/es.po
+++ b/project_task_pull_request/i18n/es.po
@@ -31,6 +31,7 @@ msgid "PR URI"
 msgstr "URI PR"
 
 #. module: project_task_pull_request
+#. odoo-python
 #: code:addons/project_task_pull_request/models/project_task.py:0
 #, python-format
 msgid ""
@@ -38,6 +39,11 @@ msgid ""
 msgstr ""
 "Por favor agregar el URI del pull request antes de pasar la tarea a esta "
 "etapa."
+
+#. module: project_task_pull_request
+#: model:ir.model,name:project_task_pull_request.model_project_project
+msgid "Project"
+msgstr "Proyecto"
 
 #. module: project_task_pull_request
 #: model_terms:ir.ui.view,arch_db:project_task_pull_request.edit_project
@@ -49,10 +55,5 @@ msgstr "URIs del Pull Request"
 msgid "Task"
 msgstr "Tarea"
 
-#. module: project_task_pull_request
-#: model:ir.model,name:project_task_pull_request.model_project_project
-msgid "WBS element"
-msgstr "Elemento WBS"
-
-#~ msgid "Project"
-#~ msgstr "Proyecto"
+#~ msgid "WBS element"
+#~ msgstr "Elemento WBS"
