--- a/project_task_pull_request/i18n/gl.po
+++ b/project_task_pull_request/i18n/gl.po
@@ -30,10 +30,16 @@ msgid "PR URI"
 msgstr ""
 
 #. module: project_task_pull_request
+#. odoo-python
 #: code:addons/project_task_pull_request/models/project_task.py:0
 #, python-format
 msgid ""
 "Please add the URI for the pull request before moving the task to this stage."
+msgstr ""
+
+#. module: project_task_pull_request
+#: model:ir.model,name:project_task_pull_request.model_project_project
+msgid "Project"
 msgstr ""
 
 #. module: project_task_pull_request
@@ -45,8 +51,3 @@ msgstr ""
 #: model:ir.model,name:project_task_pull_request.model_project_task
 msgid "Task"
 msgstr "Tarefa"
-
-#. module: project_task_pull_request
-#: model:ir.model,name:project_task_pull_request.model_project_project
-msgid "WBS element"
-msgstr ""
