--- a/project_task_pull_request/i18n/project_task_pull_request.pot
+++ b/project_task_pull_request/i18n/project_task_pull_request.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -25,11 +25,17 @@ msgid "PR URI"
 msgstr ""
 
 #. module: project_task_pull_request
+#. odoo-python
 #: code:addons/project_task_pull_request/models/project_task.py:0
 #, python-format
 msgid ""
 "Please add the URI for the pull request before moving the task to this "
 "stage."
+msgstr ""
+
+#. module: project_task_pull_request
+#: model:ir.model,name:project_task_pull_request.model_project_project
+msgid "Project"
 msgstr ""
 
 #. module: project_task_pull_request
@@ -40,9 +46,4 @@ msgstr ""
 #. module: project_task_pull_request
 #: model:ir.model,name:project_task_pull_request.model_project_task
 msgid "Task"
-msgstr ""
-
-#. module: project_task_pull_request
-#: model:ir.model,name:project_task_pull_request.model_project_project
-msgid "WBS element"
 msgstr ""
