--- a/project_parent/i18n/project_parent.pot
+++ b/project_parent/i18n/project_parent.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0\n"
+"Project-Id-Version: Odoo Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -30,6 +30,7 @@ msgstr ""
 
 #. module: project_parent
 #: model:ir.model.fields,field_description:project_parent.field_project_project__parent_id
+#: model_terms:ir.ui.view,arch_db:project_parent.view_project_project_filter
 msgid "Parent Project"
 msgstr ""
 
