--- a/project_parent/i18n/pt_BR.po
+++ b/project_parent/i18n/pt_BR.po
@@ -11,8 +11,8 @@ msgstr ""
 "POT-Creation-Date: 2017-12-22 01:55+0000\n"
 "PO-Revision-Date: 2023-10-28 09:42+0000\n"
 "Last-Translator: Adriano Prado <adrianojprado@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) (https://www.transifex.com/oca/teams/"
-"23907/pt_BR/)\n"
+"Language-Team: Portuguese (Brazil) (https://www.transifex.com/oca/"
+"teams/23907/pt_BR/)\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,6 +37,7 @@ msgstr "Caminho Superior"
 
 #. module: project_parent
 #: model:ir.model.fields,field_description:project_parent.field_project_project__parent_id
+#: model_terms:ir.ui.view,arch_db:project_parent.view_project_project_filter
 msgid "Parent Project"
 msgstr "Projeto Pai"
 
