--- a/project_task_note/i18n/es.po
+++ b/project_task_note/i18n/es.po
@@ -10,6 +10,7 @@ msgstr ""
 "PO-Revision-Date: 2024-02-15 15:44+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
@@ -17,7 +18,6 @@ msgstr ""
 
 #. module: project_task_note
 #: model:ir.model.fields,field_description:project_task_note.field_project_task__notes
-#: model_terms:ir.ui.view,arch_db:project_task_note.view_task_form2
 msgid "Internal notes"
 msgstr "Notas internas"
 
