--- a/project_task_parent_completion_blocking/i18n/project_task_parent_completion_blocking.pot
+++ b/project_task_parent_completion_blocking/i18n/project_task_parent_completion_blocking.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 16.0\n"
+"Project-Id-Version: Odoo Server 18.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -20,7 +20,6 @@ msgstr ""
 
 #. module: project_task_parent_completion_blocking
 #. odoo-python
-#: code:addons/project_task_parent_completion_blocking/models/project_task.py:0
-#, python-format
+#: code:addons/project_task_parent_completion_blocking/models/project_task.py
 msgid "You can't close this task because it has open subtasks."
 msgstr ""
